--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "exceljs": "^4.3.0",
     "lambda-log": "^3.1.0",
     "lodash.clonedeep": "^4.5.0"
